*Empty MediaWiki Message*

--- a/ᎤᏂᏥ.mw
+++ b/ᎤᏂᏥ.mw
@@ -1,12 +1,12 @@
-[[File:Brazilian favela woman breastfeeding.jpg|thumb|right|ᎤᏂᏥ]]
-[[File:Female mallard nest - natures pics edit2.jpg|thumb|250px|ᎠᎨᏴ ᎧᏬᏄ ᎠᎴ ᎧᏬᏄ ᎠᏂᏛ]]
+[[File:Edward S. Curtis Collection People 003.jpg|thumb|ᎤᏂᏥ]]
+[[File:Female mallard nest - natures pics edit2.jpg|thumb|ᎠᎨᏴ ᎧᏬᏄ ᎠᎴ ᎧᏬᏄ ᎠᏂᏛ]]
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ [[mammal|ᎦᎾᏝᎢ ᎤᏅᏗ ᎠᎾᏗᏔᏍᎩ]] ᏯᏛᎿ ᏥᏄᏍᏗ [[human|ᏴᏫ]], ᎯᎠ ᏂᎬᏩᏍᏛ ᎤᏂᏥ [[gestation|gestates]] ᎾᏍᎩ ᎠᎨᏴ ᎠᏲᎵ (ᎤᏯᏅᎲ ᎢᎬᏱ [[embryo|ᏂᎬᏂᏏᏍᎬ]], ᎾᎯᏳᎢ [[fetus]]) ᎭᏫᎾᏗᏢ ᎯᎠ [[womb|ᏂᎬᏂᏏᏍᎬ]] ᏂᏛᎴᏅᏓ [[conception (biology)|ᏗᎧᏃᏗ ᎠᏓᏁᏟᏴᏍᎬ]] ᎢᏳᏩᎪᏗ ᎯᎠ fetus ᎨᏒᎢ ᏰᎵᏊ ᎢᎦᎢ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᏙᎷᏩᏛᏓ ᎾᏍᏋ ᎤᏕᏅ. ᎯᎠ ᎤᏂᏥ ᎾᎯᏳᎢ ᎡᎪᎢ ᎾᎾᎯ labour ᎠᎴ ᎠᏓᏁᏗ [[childbirth|ᎤᏕᏅ]]. ᏌᏊ ᎢᏳᏩᎫᏗ ᎯᎠ ᎠᏲᎵ ᎨᏒᎢ ᎤᏕᏅ, ᎯᎠ ᎤᏂᏥ ᎠᏛᎯᏍᏗ [[milk|ᎤᏅᏗ]] ᎨᎳᏍᏙᏗ ᎯᎠ ᎠᏲᎵ.
 
 ᎭᏫᎾᏗᏢ ᎬᏙᏗ-sexual ᎠᏁᎳᏅᎯ, "ᎤᏂᏥ" ᏰᎵᏇ ᏱᏓᏟᎶᏍᏔᏅ ᎾᏍᏋ ᎬᏔᏅᎯ ᎤᏁᎫᏥᏛ "ᎠᏓᎦᏴᎵᎨ"; ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᏏᏴᏫ-celled ᎠᏓᏁᎳᏅᎯ Ꮎ ᏗᏟᎶᏍᏔᏅ ᎾᎥᎢ ᎠᎽᏰᎵ, ᎯᎠ ᎤᏂᏥ ᎨᏒᎢ ᎦᏁᎸ Ꮎ ᎠᏯᏔᏍᏗ ᎠᏛᎯᏍᏙᏗ "ᏧᏪᏥ ᎠᏂᎨᏴ".
 
-ᏧᏂᏥ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᏗᏂᏲᎵ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎤᏂᏥ ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏁᎸ ᎠᎨᏴ ᏐᎢ ᎬᎾᏬᏍᎬ ᏂᎬᏩᏍᏛ ᎠᏓᎦᏴᎵᎨ ᎦᎪ kalil ᎪᎯ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ. ᎪᎯ ᎨᏒᎢ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎢᏳᏍᏗᏊ [[adoption|adoptive]] ᎠᏓᎦᏴᎵᎨ ᎠᎴ [[stepmother|ᎤᏘᎿ ᎤᏥ]] (ᎯᎠ ᎤᏍᏓᏴᎲᏍᎩ ᎠᏲᎵ ᎤᏤᎵ [[father|ᎠᏓᏙᏓ]]). ᎯᎠ ᎠᎴᏂᏍᎬ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᏍᏗ ᎠᏏᏴᏫ ᎬᏙᏗ stereotypical ᏫᏚᏳᎪᏛ ᎤᏂᏥ.
+ᏧᏂᏥ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᏗᏂᏲᎵ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎤᏂᏥ ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏁᎸ ᎠᎨᏴ ᏐᎢ ᎬᎾᏬᏍᎬ ᏂᎬᏩᏍᏛ ᎠᏓᎦᏴᎵᎨ ᎦᎪ kalil ᎪᎯ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ. ᎪᎯ ᎨᏒᎢ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎢᏳᏍᏗᏊ [[adoption|ᎠᏠᏯᏍᏙᏗ]] ᎠᏓᎦᏴᎵᎨ ᎠᎴ [[stepmother|ᎤᏘᎿ ᎤᏥ]] (ᎯᎠ ᎤᏍᏓᏴᎲᏍᎩ ᎠᏲᎵ ᎤᏤᎵ [[father|ᎠᏓᏙᏓ]]). ᎯᎠ ᎠᎴᏂᏍᎬ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᏍᏗ ᎠᏏᏴᏫ ᎬᏙᏗ stereotypical ᏫᏚᏳᎪᏛ ᎤᏂᏥ.
 
-ᏧᏂᏥ ᎠᎴ ᎤᎾᏕᏗᏴᎲ ᎾᏕᏘᏴᎯᏒ, ᎾᎿ [[Mother's Day|ᎤᏂᏥ ᎤᏤᎵ ᎢᎦ]], ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏩᏂᎦᎸ [[Christianity|ᏚᏳᎪᏛ]], ᎯᎠ [[Blessed Virgin Mary|ᎠᏛᏍᎩ ᎺᎵ]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏕᏗᏴᎲ ᏥᏄᏍᏗ ᎯᎠ ''ᎤᏂᏥ ᎤᏁᎳᏅᎯ''.
+ᏧᏂᏥ ᎠᎴ ᎤᎾᏕᏗᏴᎲ ᎾᏕᏘᏴᎯᏒ, ᎾᎿ [[Mother's Day|ᎤᏂᏥ ᎤᏤᎵ ᎢᎦ]], ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏩᏂᎦᎸ [[Christianity|ᏚᏳᎪᏛ]], ᎯᎠ [[ᎺᎵ, ᎤᏂᏥ ᏥᏌ|ᎠᏛᏍᎩ ᎺᎵ]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏕᏗᏴᎲ ᏥᏄᏍᏗ ᎯᎠ ''ᎤᏂᏥ ᎤᏁᎳᏅᎯ''.
 
 "ᎹᎹ", "Mom"/"mommy", "ᎡᏥ" ᎠᎴ ᎢᎦᏛ ᎠᏓᏙᎳᎩ ᎠᎴ ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᎤᏂᏁᏨ ᎾᏍᎩᎾᎢ ᎤᏂᏥ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᎦᎾᏭ ᎡᏏᏯ ᎥᎦᏔᎲᎢ, Ꭿ Ꭰ ᎤᏂᏥ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ "Amma"(ᎠᎹ), "Oma" (ᎣᎹ)ᎠᎴ "Ammi" (ᎠᎻ), ᎠᎴ ᏗᎧᏃᎩᏛ ᏂᏛᏓᎴᎲᏍᎩ. ᎯᎠ "M" ᎤᏃᏴᎬ ᎤᏁᎵᏒᎯ ᎾᏍᏋ ᎢᎬᏩᎾᏓᎴᎩ ᎯᎠ ᎧᏁᏨ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏗᎦᏬᏂᎯᏍᏗ.<ref>[[wiktionary:mother]]</ref> ᎤᎪᏗᏗ ᎢᏧᏩᎪᏗ ᎾᏍᎩ ᎯᎠ ᏓᏓᎴᏂᏍᎬ ᏫᏚᏳᎪᏛ ᏗᏓᏓᏂᎸᎢᏍᏗ ᎠᎴ ᎤᏓᏥ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎤᏤᎵ ᎥᎴᏂᏙᎲ.
 
@@ -19,8 +19,7 @@
 * [[Mary, mother of Jesus|ᎺᎵ, ᎤᏂᏥ ᏥᏌ]]
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ᎠᎴ ᏫᏓᏎᎸᎢ ==
-{{wiktionary|mother}}
-{{Commons|Category:Childbirth}}
+{{Commons|Category:Mothers}}
 <div class="references-small">
 <references />
 </div>
