--- a/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -206,6 +206,7 @@
 * [http://www.cherokeenewtestament.org Cherokee New Testament Online] Online translation of the New Testament.  Currently the largest Cherokee document on the internet.
 * [http://www.unicode.org/charts/PDF/U13A0.pdf Unicode Chart]
 * [http://wiki.langwiki.info/Cherokee WikiLang ᏣᎳᎩ page (Basic grammar information)]
+* [http://www.cherokeelessons.com/ CherokeeLessons.com] (Hosts Creative Commons licensed materials including a textbook covering grammar and many hours of challenge/response based audio lesson files).
 * [http://www.unilang.org/viewtopic.php?f=99&t=27425&st=0&sk=t&sd=a&start=120#p615095 UNILANG forum for freely available teaching materials.] (Includes PDF textbook and audio files).
 
 {{stub}}
