--- a/ᎤᏂᏥ.mw
+++ b/ᎤᏂᏥ.mw
@@ -4,13 +4,13 @@
 
 ᎭᏫᎾᏗᏢ ᎬᏙᏗ-sexual ᎠᏁᎳᏅᎯ, "ᎤᏂᏥ" ᏰᎵᏇ ᏱᏓᏟᎶᏍᏔᏅ ᎾᏍᏋ ᎬᏔᏅᎯ ᎤᏁᎫᏥᏛ "ᎠᏓᎦᏴᎵᎨ"; ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᏏᏴᏫ-celled ᎠᏓᏁᎳᏅᎯ Ꮎ ᏗᏟᎶᏍᏔᏅ ᎾᎥᎢ ᎠᎽᏰᎵ, ᎯᎠ ᎤᏂᏥ ᎨᏒᎢ ᎦᏁᎸ Ꮎ ᎠᏯᏔᏍᏗ ᎠᏛᎯᏍᏙᏗ "ᏧᏪᏥ ᎠᏂᎨᏴ".
 
-ᏧᏂᏥ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᏗᏂᏲᎵ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎤᏂᏥ ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏁᎸ ᎠᎨᏴ ᏐᎢ ᎬᎾᏬᏍᎬ ᏂᎬᏩᏍᏛ ᎠᏓᎦᏴᎵᎨ ᎦᎪ kalil ᎪᎯ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ. ᎪᎯ ᎨᏒᎢ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎢᏳᏍᏗᏊ [[adoption|ᎠᏠᏯᏍᏙᏗ]] ᎠᏓᎦᏴᎵᎨ ᎠᎴ [[stepmother|ᎤᏘᎿ ᎤᏥ]] (ᎯᎠ ᎤᏍᏓᏴᎲᏍᎩ ᎠᏲᎵ ᎤᏤᎵ [[father|ᎠᏓᏙᏓ]]). ᎯᎠ ᎠᎴᏂᏍᎬ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᏍᏗ ᎠᏏᏴᏫ ᎬᏙᏗ stereotypical ᏫᏚᏳᎪᏛ ᎤᏂᏥ.
+ᏧᏂᏥ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᏗᏂᏲᎵ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎤᏂᏥ ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏁᎸ ᎠᎨᏴ ᏐᎢ ᎬᎾᏬᏍᎬ ᏂᎬᏩᏍᏛ ᎠᏓᎦᏴᎵᎨ ᎦᎪ ᎧᎵᎵ ᎪᎯ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ. ᎪᎯ ᎨᏒᎢ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎢᏳᏍᏗᏊ [[adoption|ᎠᏠᏯᏍᏙᏗ]] ᎠᏓᎦᏴᎵᎨ ᎠᎴ [[stepmother|ᎤᏘᎿ ᎤᏥ]] (ᎯᎠ ᎤᏍᏓᏴᎲᏍᎩ ᎠᏲᎵ ᎤᏤᎵ [[father|ᎠᏓᏙᏓ]]). ᎯᎠ ᎠᎴᏂᏍᎬ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᏍᏗ ᎠᏏᏴᏫ ᎬᏙᏗ stereotypical ᏫᏚᏳᎪᏛ ᎤᏂᏥ.
 
-ᏧᏂᏥ ᎠᎴ ᎤᎾᏕᏗᏴᎲ ᎾᏕᏘᏴᎯᏒ, ᎾᎿ [[Mother's Day|ᎤᏂᏥ ᎤᏤᎵ ᎢᎦ]], ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏩᏂᎦᎸ [[Christianity|ᏚᏳᎪᏛ]], ᎯᎠ [[ᎺᎵ, ᎤᏂᏥ ᏥᏌ|ᎠᏛᏍᎩ ᎺᎵ]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏕᏗᏴᎲ ᏥᏄᏍᏗ ᎯᎠ ''ᎤᏂᏥ ᎤᏁᎳᏅᎯ''.
+ᏧᏂᏥ ᎠᎴ ᎤᎾᏕᏗᏴᎲ ᎾᏕᏘᏴᎯᏒ, ᎾᎿ [[Mother's Day|ᎤᏂᏥ ᎤᏤᎵ ᎢᎦ]], ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏩᏂᎦᎸ [[Christianity|ᏚᏳᎪᏛ]], ᎯᎠ [[ᎺᎵ, ᎤᏂᏥ ᏥᏌ]]<!--Mary, Mother of Jesus--> ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏕᏗᏴᎲ ᏥᏄᏍᏗ ᎯᎠ ''ᎤᏂᏥ ᎤᏁᎳᏅᎯ''.
 
-"ᎹᎹ", "Mom"/"mommy", "ᎡᏥ" ᎠᎴ ᎢᎦᏛ ᎠᏓᏙᎳᎩ ᎠᎴ ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᎤᏂᏁᏨ ᎾᏍᎩᎾᎢ ᎤᏂᏥ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᎦᎾᏭ ᎡᏏᏯ ᎥᎦᏔᎲᎢ, Ꭿ Ꭰ ᎤᏂᏥ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ "Amma"(ᎠᎹ), "Oma" (ᎣᎹ)ᎠᎴ "Ammi" (ᎠᎻ), ᎠᎴ ᏗᎧᏃᎩᏛ ᏂᏛᏓᎴᎲᏍᎩ. ᎯᎠ "M" ᎤᏃᏴᎬ ᎤᏁᎵᏒᎯ ᎾᏍᏋ ᎢᎬᏩᎾᏓᎴᎩ ᎯᎠ ᎧᏁᏨ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏗᎦᏬᏂᎯᏍᏗ.<ref>[[wiktionary:mother]]</ref> ᎤᎪᏗᏗ ᎢᏧᏩᎪᏗ ᎾᏍᎩ ᎯᎠ ᏓᏓᎴᏂᏍᎬ ᏫᏚᏳᎪᏛ ᏗᏓᏓᏂᎸᎢᏍᏗ ᎠᎴ ᎤᏓᏥ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎤᏤᎵ ᎥᎴᏂᏙᎲ.
+"ᎹᎹ", "Mom"/"mommy", "ᎡᏥ" ᎠᎴ ᎢᎦᏛ ᎠᏓᏙᎳᎩ ᎠᎴ ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᎤᏂᏁᏨ ᎾᏍᎩᎾᎢ ᎤᏂᏥ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᎦᎾᏭ ᎡᏏᏯ ᎥᎦᏔᎲᎢ, Ꭿ Ꭰ ᎤᏂᏥ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ "Amma"(ᎠᎹ), "Oma" (ᎣᎹ) ᎠᎴ "Ammi" (ᎠᎻ), ᎠᎴ ᏗᎧᏃᎩᏛ ᏂᏛᏓᎴᎲᏍᎩ. ᎯᎠ "M" ᎤᏃᏴᎬ ᎤᏁᎵᏒᎯ ᎾᏍᏋ ᎢᎬᏩᎾᏓᎴᎩ ᎯᎠ ᎧᏁᏨ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏗᎦᏬᏂᎯᏍᏗ.<ref>[http://en.wiktionary.org/wiki/mother]</ref> ᎤᎪᏗᏗ ᎢᏧᏩᎪᏗ ᎾᏍᎩ ᎯᎠ ᏓᏓᎴᏂᏍᎬ ᏫᏚᏳᎪᏛ ᏗᏓᏓᏂᎸᎢᏍᏗ ᎠᎴ ᎤᏓᏥ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎤᏤᎵ ᎥᎴᏂᏙᎲ.
 
-ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎾᏙᏢᎯ, [[single mother|ᏏᏴᏫ ᎤᏂᏥ]]ᎫᏢᎥᏍᎬ, ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏍᎦᏯ ᎤᏓᎠᏍᎦᏯ udal ᏂᎨᏒᎾ ᎤᏂᏥ, ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏁᎸᎯ ᏥᏄᏍᏗ ᎤᏢᏲᎵᏍᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎢᏳᏍᏗ ᎧᏃᎮᏗ. 
+ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎾᏙᏢᎯ, [[single mother|ᏏᏴᏫ ᎤᏂᏥ]] ᎫᏢᎥᏍᎬ, ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏍᎦᏯ ᎤᏓᎠᏍᎦᏯ ᎤᏓᎵ ᏂᎨᏒᎾ ᎤᏂᏥ, ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏁᎸᎯ ᏥᏄᏍᏗ ᎤᏢᏲᎵᏍᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎢᏳᏍᏗ ᎧᏃᎮᏗ. 
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 * [[List of songs about mothers|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎬᏩᏚᏫᏛ ᏧᏂᏥ]]
