--- a/ᏒᏃᏱ.mw
+++ b/ᏒᏃᏱ.mw
@@ -2,12 +2,12 @@
 
 '''ᏒᏃᏱ''' ᎠᎴ '''ᏒᏃᏱ-ᎢᏳᏩᎪᏗ''' ᎨᏒᎢ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[ᏅᏙ ᎢᎦ ᎡᎯ]] ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ [[ᎤᏚᎳᏗ]]. ᎯᎠ ᎠᎿᏗᏢ ᏒᏃᏱ ᎨᏒᎢ [[ᎢᎦ]] (ᎠᎴ "ᎢᎦ" ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ "ᎢᎦ" ᏥᏄᏍᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ 24-ᏑᏟᎶᏛ ᎠᎴᏫᏍᏙᏗ).
 
-== iyuwakodi ᎠᎴ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ ==
+== ᎢᏳᏩkᎣᏗ ᎠᎴ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ ==
 ᏚᎵᏏᏂᏒ ᎠᎴ ᏍᏆᎵᎯᎨᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎸᏍᎩ ᎢᎦ ᎾᎿ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎤᏍᏆᎸᎲ ᏔᎵ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ. ᏌᏊ, ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏍᏓᏱ, ᎠᎴ ᎤᎭ ᎬᎪᏩᏛᏗ ᏂᎬᎢ ᎬᏩᏚᏫᏛ 32 [[ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ]]. ᏔᎵ, ᎯᎠ [[ᎦᏃᎴᏍᎬ]] refracts [[sunlight]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎢᎦᏛ ᎾᏍᎩ ᎠᏙᏯᏅᎯᏗᎠ ᎯᎠ ᎦᏙᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ [[ᎤᏚᎳᏗ]] ᎾᎥᎢ ᎬᏩᏚᏫᏛ 34 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ. ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎾᏍᎩ ᎯᎠ ᏔᎵ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎤᏅᏔᏂᏓᏍᏗ Ꮎ ᎠᏨᏍᏛ ᎠᏙᏯᏅᎯᏗᎠ ᎯᎠ ᎦᏙᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ centre ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ ᎤᏚᎳᏗ ᎾᎥᎢ ᎬᏩᏚᏫᏛ 50 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ. 
 
 ᏄᏠᏯᏍᏛᎾ ᎾᏍᎩ ᎯᎠ ᏄᎵᏍᏔᏅ, ᎢᎦ ᎠᎴ ᏒᏃᏱ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎯᎠ ᎤᏠᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ [[Autumnal equinox|autumnal]] (ᎤᎳᎪᎲᏍᏗ/ᎤᎶᏒᎩ) ᎠᎴ [[ᎠᏛᏍᎩ]] (ᎠᎹ ᎦᏄᎪᎬ) [[equinox]]es, ᎯᎠ ᎢᏳᏊ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᏓᏂᎶᏍᎬᎢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]]. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏄᏍᏛ, ᏴᏩᎫᏫᏛ ᎯᎠ equinoxes ᎯᎠ ᎢᎦ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ 14 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎯᎠ ᏒᏃᏱ ᎾᎾᎢ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ᎢᏧᎳᎭ ᎤᏟ ᎢᎦᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ [[ᎦᏅᎯᏓ ᎠᏓ]]. ᎯᎠ [[ᎪᎨᏱ]] ᎠᎴ [[ᎪᎳ]] [[solstice]]s ᎤᏙᏪᎸ ᎯᎠ shortest ᏒᏃᏱ ᎠᎴ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᏒᏃᏱ, ᎨᏥᎸᏉᏗᏳ. [[File:Nott painting.jpg|thumb|right|250px|[[Nótt]], ᎯᎠ Norse ᎬᎨᏳᎢ ᎯᎠ ᏒᏃᏱ, ᎠᎩᎸᎥᏍᎦ ᎾᏍᎩ ᎠᎨᏴ ᏐᏈᎵ ᎭᏫᎾᏗᏢ ᎪᎯ [[19th century|19th sqohitsuqui tsudetiyvdi]] ᎠᏂᎶᏁᏍᎬ ᎾᎥᎢ [[Peter Nicolai Arbo]].]]
 
-ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎨᏒᎢ ᎯᎠ [[ᎤᏴᏢ]] ᎠᎴ [[ᎤᎦᎾᏭ ᎦᏅᎯᏓ ᎠᏓ]], ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎯᎠ ᎠᏍᏓᏅᏅ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎤᏤᎵ ᏂᎦᏅᎯᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ equinoxes ᏄᎵᏍᏔᏅ ᎬᏙᏗ ᎢᎦ ᎠᎴ ᏒᏃᏱ ᎠᏍᏚᏗ ᎢᏗᎦᏗ ᏂᎦᏅᎯᏒ, ᎤᏓᎷᎸ ᎠᎴ ᎤᎶᏐᏅ equinox ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏒᏃᏱ ᎢᎦ ᏗᎦᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏅᎯᏓ ᎠᏓ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎠᏰᎵ ᎯᎠ [[Tropic of Cancer|Tropic ᎠᏓᏰᏍᎩ]] ᎠᎴ ᎯᎠ [[Tropic of Capricorn|Tropic Capricorn]]. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Denmark]] ᎤᎭ ᏍᏆᎵᎯᎨᏍᏗ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[ᎠᎹ ᎦᏄᎪᎬ]] ᎤᎭ. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Antarctica]] ᎤᎭ ᎦᏅᎯᏓᎨ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[Chile]] ᎤᎭ. ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎡᎶᎯ ugatohvsv ᎯᎠ ᎤᏠᏱ ᏧᎾᏟᎶᏍᏙᏗ ᏒᏃᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ [[ᎤᏜᏅᏛ]], ᎠᎴ ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎠᎴ 6 ᎢᏯᏅᏓ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏌᏊ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᏂᎦᏙᎲᏒ ᎦᏅᎯᏓ ᏚᎵᏏᏂᏒ (ᎪᎳ) ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎨᏒᎢ experiencing ᏍᏆᎳᎢ ᏚᎵᏏᏂᏒ (ᎪᎨᏱ).
+ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎨᏒᎢ ᎯᎠ [[ᎤᏴᏢ]] ᎠᎴ [[ᎤᎦᎾᏭ ᎦᏅᎯᏓ ᎠᏓ]], ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎯᎠ ᎠᏍᏓᏅᏅ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎤᏤᎵ ᏂᎦᏅᎯᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ equinoxes ᏄᎵᏍᏔᏅ ᎬᏙᏗ ᎢᎦ ᎠᎴ ᏒᏃᏱ ᎠᏍᏚᏗ ᎢᏗᎦᏗ ᏂᎦᏅᎯᏒ, ᎤᏓᎷᎸ ᎠᎴ ᎤᎶᏐᏅ equinox ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏒᏃᏱ ᎢᎦ ᏗᎦᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏅᎯᏓ ᎠᏓ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎠᏰᎵ ᎯᎠ [[Tropic of Cancer|Tropic ᎠᏓᏰᏍᎩ]] ᎠᎴ ᎯᎠ [[Tropic of Capricorn|Tropic Capricorn]]. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Denmark]] ᎤᎭ ᏍᏆᎵᎯᎨᏍᏗ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[ᎠᎹ ᎦᏄᎪᎬ]] ᎤᎭ. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Antarctica]] ᎤᎭ ᎦᏅᎯᏓᎨ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[Chile]] ᎤᎭ. ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎡᎶᎯ ᎤᎦtᎣᎲᏒ ᎯᎠ ᎤᏠᏱ ᏧᎾᏟᎶᏍᏙᏗ ᏒᏃᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ [[ᎤᏜᏅᏛ]], ᎠᎴ ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎠᎴ 6 ᎢᏯᏅᏓ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏌᏊ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᏂᎦᏙᎲᏒ ᎦᏅᎯᏓ ᏚᎵᏏᏂᏒ (ᎪᎳ) ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎨᏒᎢ experiencing ᏍᏆᎳᎢ ᏚᎵᏏᏂᏒ (ᎪᎨᏱ).
 
 ᎾᎥᏂᎨ ᎯᎠ ᏔᎵ ᎦᏅᎯᏓ ᎠᏓ, ᎦᎶᏒᏍᏔᏅ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᎡᎦᎫᏘ ᎢᏧᏟᎶᏛ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏫᎬᎵᏱᎵᏒ ᎢᎦ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎯᎠ ᎪᎨᏱ, ᎠᏍᏓᏩᏛᏓ ᎾᎥᎢ ᏫᎬᎵᏱᎵᏒ ᏒᏃᏱ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏒᏙᏂ ᎪᎳ.
 
