*Empty MediaWiki Message*

--- a/ᏒᏃᏱ.mw
+++ b/ᏒᏃᏱ.mw
@@ -13,11 +13,11 @@
 
 == ᎠᎾᏓᏟᏏᏍᎬ ᎢᎦᏛ ==
 
-ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ iyuwakodi ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:MATTTREVITHICKBW.JPG|thumb|200px|left| ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎦᎳᏅᏛ ᎾᎾᎢ nighttime]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-ᎢᏳᏩᎪᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
+ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ ᎢᏳᏩᎣᏗ ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:MATTTREVITHICKBW.JPG|thumb|200px|left| ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎦᎳᏅᏛ ᎾᎾᎢ nighttime]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-ᎢᏳᏩᎪᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
 
 ᎢᏧᎳᎭ ᏄᏠᏯᏍᏛᎾ ᏗᏟᎶᏍᏔᏅ ᎠᏨᏍᏛ, [[ᏒᏃᏱ ᎡᎯ ᏅᏙ]]ᎠᏨᏍᏛ ᏱᏓᏟᎶᏍᏔᏅ ᏗᎪᏢᏅ ᎾᏍᎩ ᏰᎵᏊ ᎡᏙᎵᏙᎲ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏙᏯᏗᏢ ᎾᎾᎢ ᏒᏃᏱ.
 
-ᏒᏃᏱ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎦᏂᏰᎩ ᎠᎴ ᎤᏐᏅᎢ, ᎢᎬᏂᏏᏍᎩ ᏗᏓᎾᏒᎲᏍᎩ ᎠᎴ ᎦᏂᏰᎬ ᎡᎿᎢ ᎡᎥ ᏰᎵᏇ ᎾᏍᏋ ᎤᏍᏆᏂᎪᏗ ᎾᎥᎢ ᎤᎳᏏᎬᎢ. ᎯᎠ ᎤᏬᎯᏳᏒ ᎭᏫᎾᏗᏢ [[ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ]] ᎢᏳᏓᎵᎭ ᎠᏠᏯᏍᏗ ᎯᎠ ᎠᏓᏅᏖᏗ Ꮎ ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ ᎠᎴ ᏗᏓ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᎳᏂᎩᏛ ᎾᎾᎢ ᏒᏃᏱ. ᎤᏠᏱ, mythical ᎠᎴ folkloric ᏕᏁᎳᏅᎯ ᏥᏄᏍᏗ [[ᏄᏁᎸᎾ]], ᎠᎴ [[werewolf|werewolves]] ᎠᎴ ᏁᎵᏒ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ lyadvnehi ᎾᎾᎢ ᏒᏃᏱ. [[ᎠᏂᏣᏍᎩᎵ]] ᎠᎴ ᎤᏬᎯᏳᏅ ᎤᎴᏲᎥ yvwatuwidv ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎾᎯᏳᎨᏒ ᏒᏃᏱ-iyuwakodi. ᎭᏫᎾᏗᏢ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎥᎦᏔᎲᎢ, ᎾᎿᎢ ᎬᏂᎨᏒ ᏄᏍᏗ ᎢᏗᎦᎸᎳᏗ ᎠᎴ ᏄᎵᏍᏔᏂᏙᎸ ᎾᎿ ᎯᎠ ᎦᏂᏰᎩ ᏒᏃᏱ-iyuwakodi.
+ᏒᏃᏱ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎦᏂᏰᎩ ᎠᎴ ᎤᏐᏅᎢ, ᎢᎬᏂᏏᏍᎩ ᏗᏓᎾᏒᎲᏍᎩ ᎠᎴ ᎦᏂᏰᎬ ᎡᎿᎢ ᎡᎥ ᏰᎵᏇ ᎾᏍᏋ ᎤᏍᏆᏂᎪᏗ ᎾᎥᎢ ᎤᎳᏏᎬᎢ. ᎯᎠ ᎤᏬᎯᏳᏒ ᎭᏫᎾᏗᏢ [[ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ]] ᎢᏳᏓᎵᎭ ᎠᏠᏯᏍᏗ ᎯᎠ ᎠᏓᏅᏖᏗ Ꮎ ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ ᎠᎴ ᏗᏓ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᎳᏂᎩᏛ ᎾᎾᎢ ᏒᏃᏱ. ᎤᏠᏱ, mythical ᎠᎴ folkloric ᏕᏁᎳᏅᎯ ᏥᏄᏍᏗ [[ᏄᏁᎸᎾ]], ᎠᎴ [[werewolf|werewolves]] ᎠᎴ ᏁᎵᏒ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ ᏯᏛᏁᎯ ᎾᎾᎢ ᏒᏃᏱ. [[ᎠᏂᏣᏍᎩᎵ]] ᎠᎴ ᎤᏬᎯᏳᏅ ᎤᎴᏲᎥ ᏴᏩᎤᏫᏛ ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎾᎯᏳᎨᏒ ᏒᏃᏱ-ᎢᏳᏩᎣᏗ. ᎭᏫᎾᏗᏢ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎥᎦᏔᎲᎢ, ᎾᎿᎢ ᎬᏂᎨᏒ ᏄᏍᏗ ᎢᏗᎦᎸᎳᏗ ᎠᎴ ᏄᎵᏍᏔᏂᏙᎸ ᎾᎿ ᎯᎠ ᎦᏂᏰᎩ ᏒᏃᏱ-ᎢᏳᏩᎣᏗ.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 {{Commons|Category:Night}}
