*Empty MediaWiki Message*

--- a/ᎤᏍᏗᏰᎬ.mw
+++ b/ᎤᏍᏗᏰᎬ.mw
@@ -28,25 +28,25 @@ http://www.anthro.utah.edu/~rogers/pubs/Pagel-BL-270-S117.pdf
 * [[Terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]], ᎯᎠ ᎠᏂᎧᎵ ᎤᏙᎷᏩᏛᏓ ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏂᎦᎥᏊ ᎦᏅᎯᏓᎨ, coarser, thicker, ᎠᎴ darker ᎬᎾᏬᏍᎬ vellus ᎤᏍᏗᏰᎬ
 
 === ᎤᏛᏏᏗᏒ ===
-ᎯᎠ ᎤᎪᏗᏗ noticeable ᎢᎦᏛ ᏴᏫ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏛᏍᎬ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎾᎿ ᎤᎪᏗᏗ gantlai. Ꮝ ᏅᏙᎲᏅ ᎨᏒᎢ termed [[alopecia]], ᏱᏓᏟᎶᏍᏔᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[baldness]]. 
+ᎯᎠ ᎤᎪᏗᏗ noticeable ᎢᎦᏛ ᏴᏫ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏛᏍᎬ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎾᎿ ᎤᎪᏗᏗ ᎦᏝᎢ. Ꮝ ᏅᏙᎲᏅ ᎨᏒᎢ termed [[alopecia]], ᏱᏓᏟᎶᏍᏔᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[baldness]]. 
 
 ᎯᎠ ᏐᎢ ᎢᎦᏛᎭ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᏄᏍᏛ ᏗᎧᏃᏗ ᏄᏓᎴᎿᎥ ᎢᏗᎦᎪᏘ ᎤᏍᏗᏰᎬ. ᏂᏛᎴᏅᏓ ᎠᏛᏍᎩ ᎾᎿ '''[[vellus hair|vellus ᎤᏍᏗᏰᎬ]]''' ᏗᎫᏝᎢ ᎯᎠ ᏂᎦᏛ ᏴᏫ ᎠᏰᎸ ᎾᎪᎲᎾ [[sex|ᏧᏠᎯᏍᏗ]] ᎠᎴ [[race|ᏧᎾᏓᎴᏅᏓ ᏴᏫ]] ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎷᎯᏍᏗ:  ᎯᎠ [[lips|ᎠᏓᎴᏂᏍᎬ]], ᎯᎠ [[nipple|ᏂᎯ]], ᎯᎠ ᏂᎦᏅᎯᏒ [[hand|ᎤᏬᏰᏂ]], ᎯᎠ ᎠᎳᏑᎶ ᎦᎵᏍᏜᎥ [[feet|ᏧᎾᎳᏏᏕᎾ]], ᎤᏙᎯᏳ ᎤᏓᏎᎦᏤᏗ ᎠᏛᎯᏍᏙᏗ ᎡᏍᎦᏂ, ᎯᎠ [[navel|ᎠᏰᎵ]] ᎠᎴ [[scar|ᎤᏁᎸᏒ]] ᏂᎦᏛ.  ᎯᎠ [[density|ᎠᏫᏒᏗ]] ᎯᎠ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [[square centimeter|ᏅᎩ ᏧᏅᏏᏯ centimeter]]) varies ᏂᏛᎴᏅᏓ ᏌᏊ ᎠᏏᏴᏫ ᏄᏓᎴ.
 [[Image:Androgenic hair.JPG|thumb|left|ᏗᏗᎦᎴᏴ  androgenic ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᎨᏴ ᎠᎴ ᎠᏍᎦᏯ ᎠᏰᎸ]]
 
-ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ ᎤᏩᎾᏕᏍᎩ ᎠᏍᎦᏯ [[hormone]]([[androgen]]) ᎾᎯᏳᎨᏒ [[puberty|ᎠᏛᏍᎩ]] ᏂᏕᎬᏂᏏᏍᎬ '''ᏧᎾᏍᏗ ᏧᎵᎬᏩᎳᏅᎯ''' vellus ᎤᏍᏗᏰᎬ ᎾᎾᎯ '''[[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]]''' ᎾᎿ ᎯᎸᏍᎩ ᎢᎦᏛᎭ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ. ᎯᎠ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎦᏬᎯᎵᏴᏍᏗ [[androgen]], ᎢᎬᏱᏗᏢ [[testosterone]] ᎠᎴ Ꮝ ᏗᏟᎶᏍᏔᏅ; ᎯᎠ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎯᎠ ᎢᏴ termed '''[[androgenic hair|androgenic ᎤᏍᏗᏰᎬ]]'''. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᏍᏗᏰᎬ ᎧᏁᏉᎩ. ᏱᏂᎬᏛᎾ, ᏄᏓᎴᎿᎥ ᎡᏍᎦᏂ ᎦᏬᎯᎵᏴᏍᏗ ᎬᏙᏗ ᏄᏓᎴᎿᎥ sensitivities. ᏥᏄᏍᏗ testosterone ᎤᏩᎾᏕᏍᎩ ᎧᏁᏉᎠ, ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎾᏄᎪᏨᎢ androgenic ᎤᏍᏗᏰᎬ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎯᎠ ᎠᏓᏅᏍᏗ androgen sensitivity. ᎯᎠ [[pubic]] ᎡᏍᎦᏂ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ, ᎠᎴ ᎦᎨᏓᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎠᏛᏍᎦ ᎾᎿᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ androgens.
+ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ ᎤᏩᎾᏕᏍᎩ ᎠᏍᎦᏯ [[hormone]]([[androgen]]) ᎾᎯᏳᎨᏒ [[puberty|ᎠᏛᏍᎩ]] ᏂᏕᎬᏂᏏᏍᎬ '''ᏧᎾᏍᏗ ᏧᎵᎬᏩᎳᏅᎯ''' vellus ᎤᏍᏗᏰᎬ ᎾᎾᎯ '''[[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]]''' ᎾᎿ ᎯᎸᏍᎩ ᎢᎦᏛᎭ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ. ᎯᎠ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎦᏬᎯᎵᏴᏍᏗ [[androgen]], ᎢᎬᏱᏗᏢ [[testosterone]] ᎠᎴ Ꮝ ᏗᏟᎶᏍᏔᏅ; ᎯᎠ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎯᎠ ᎢᏴ termed '''[[androgenic hair|androgenic ᎤᏍᏗᏰᎬ]]'''. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᏍᏗᏰᎬ ᎧᏁᏉᎩ. ᏱᏂᎬᏛᎾ, ᏄᏓᎴᎿᎥ ᎡᏍᎦᏂ ᎦᏬᎯᎵᏴᏍᏗ ᎬᏙᏗ ᏄᏓᎴᎿᎥ sensitivities. ᏥᏄᏍᏗ  ᎤᏩᎾᏕᏍᎩ ᎧᏁᏉᎠ, ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎾᏄᎪᏨᎢ androgenic ᎤᏍᏗᏰᎬ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎯᎠ ᎠᏓᏅᏍᏗ androgen sensitivity. ᎯᎠ [[pubic]] ᎡᏍᎦᏂ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ, ᎠᎴ ᎦᎨᏓᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎠᏛᏍᎦ ᎾᎿᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ androgens.
 
-ᎡᏍᎦᏂ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ Ꮎ ᎤᏙᎷᏬᏗ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎤᏍᏆᎸᎲ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes, ansigaya ᎠᎴ ᎠᏂᎨᏴ, ᎠᎴ ᎯᎠ [[axillary hair|underarms]] ᎠᎴ ᎯᎠ [[pubic hair|pubic ᎡᏍᎦᏂ]]. ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ansigaya ᎠᏛᏍᎬ androgenic ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᏍᎦᏂ. ᎾᎿᎢ ᎨᏒᎢ '''[[sexual dimorphism]]''' ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎴ ᏗᏗᎦᎴᏴ androgenic ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎠᏍᎦᏯ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ (ᎾᏍᎩᎾ ᎨᏒ [[facial hair|facial ᎤᏍᏗᏰᎬ]], [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]], [[abdominal hair|ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ]] ᎠᎴ ᎤᏍᏗᏰᎬ ᎾᎿ [[human leg|ᏗᏂᏅᏍᎨᏂ]] ᎠᎴ [[arm|ᎧᏃᎨᏂ]]) ᎠᎴ ᎠᎨᏴ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ vellus ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎪᏩᏛᏗ. ᎯᎠ [[gene]]tic ᏚᏂᏲᏍᎬ ᏗᎫᎪᏙᏗ ᎯᎠ ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᎠᎴ ᎠᏂᏏᏴᏫᎭ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ androgenic ᎤᏍᏗᏰᎬ. 
+ᎡᏍᎦᏂ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ Ꮎ ᎤᏙᎷᏬᏗ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎤᏍᏆᎸᎲ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes, ᎠᏏᎦᏯ ᎠᎴ ᎠᏂᎨᏴ, ᎠᎴ ᎯᎠ [[axillary hair|underarms]] ᎠᎴ ᎯᎠ [[pubic hair|pubic ᎡᏍᎦᏂ]]. ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ᎠᏏᎦᏯ ᎠᏛᏍᎬ androgenic ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᏍᎦᏂ. ᎾᎿᎢ ᎨᏒᎢ '''[[sexual dimorphism]]''' ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎴ ᏗᏗᎦᎴᏴ androgenic ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎠᏍᎦᏯ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ (ᎾᏍᎩᎾ ᎨᏒ [[facial hair|facial ᎤᏍᏗᏰᎬ]], [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]], [[abdominal hair|ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ]] ᎠᎴ ᎤᏍᏗᏰᎬ ᎾᎿ [[human leg|ᏗᏂᏅᏍᎨᏂ]] ᎠᎴ [[arm|ᎧᏃᎨᏂ]]) ᎠᎴ ᎠᎨᏴ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ vellus ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎪᏩᏛᏗ. ᎯᎠ [[gene]]tic ᏚᏂᏲᏍᎬ ᏗᎫᎪᏙᏗ ᎯᎠ ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᎠᎴ ᎠᏂᏏᏴᏫᎭ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ androgenic ᎤᏍᏗᏰᎬ. 
 
 ᎤᏁᏉᏨᎯ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᎨᏴ ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[hirsutism]]. ᎤᎶᏒᏍᏔᏅ ᎠᎴ ᎧᎵ ᏂᎨᏒᎾ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎾᎿ ᎯᎠ ᎠᏰᎸ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ [[hypertrichosis]]. ᎠᎦᏎᏍᏗᏍᎬ ᎠᏂᏏᏴᏫᎭ ᏄᏍᏗᏓᏅ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᎧᎵ ᏂᎨᏒᎾ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᏂᎪᏗ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎦᏃᏢᎩ ᏅᏬᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎾᎿ cultural ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᏄᏍᏛ ᎣᏓᏅᏛ.
 
 [[Image:Gray945.png|thumb|left|150px|ᏫᏚᏳᎪᏛ   ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ]]
 [[Image:Shuau with long hair.jpg|thumb|right|150px| ᎠᏏᏴᏫ ᎬᏙᏗ ᏭᎶᏒᏍᏔᏅ gantlai ᎤᏍᏗᏰᎬ]]
-ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᎴᏪᎢᏍᏙᏗ ᎤᏛᏏᏗᏒ ᎠᎴ dormancy. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏛᏏᏗᏒ ᎢᎦᏛ ᎯᎠ ᎠᏓᏠᎯᏍᏗ, [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᎴ ᎦᏅᎯᏓ ᎠᎴ [[bulbous|ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏓᏌᎳᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᏦᎢᏁ [[millimeter]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ. ᎤᎶᏐᏅ ᏦᎢ ᏑᏓᎵ ᎢᏯᏅᏓ, ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎾᎴᏫᏍᏗᏍᎬ (ᎯᎠ pubic ᎠᎴ armpit ᎡᏍᎦᏂ ᎤᎲᎢ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᎤᏛᏏᏗᏒ ᎠᎴᏫᏍᏙᏗ). ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏛᏍᎦ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎠᏍᏓᏩᏗᏒ ᎠᎴᏫᏍᏙᏗ [[dormancy]], ᏄᏓᎴ ᎤᏛᏏᏗᏒ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎢᏤ ᎤᏍᏗᏰᎬ pushes ᎯᎠ ᎠᎦᏴᎵ ᏌᏊ atsinuqowisgv ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏂᏛᎴᏅᏓ ᎭᏫᎾᏗᏢ. ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ, ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏛᏍᎦ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ iyuwakodi ᎠᎴ ᎡᏆ ᏂᎦᏅᎯᏒ ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ ᏚᎦᏔᏬᎸ. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.25 centimeters, ᎠᎴ ᎬᏩᏚᏫᏛ 0.5 [[inch|ᎢᏯᏏᏔᏛ]]es, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏏᏅᏙ. [[Anthropologist]]ᎠᏩᏒᏗᏱ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏛᎬᎢ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ [[adornment|ᎠᏣᏅᏙ]], byproduct ᎠᏂᎦᏲᎵ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]] ᏌᏊ ᎢᏳᏩᎫᏗ ᏐᎢ [[somatic|ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎤᏍᏗᏰᎬ ᎠᏰᎲ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᏄᏓᎴ ᎤᏝᏅᏓᏕᎲ ᎨᏒᎢ Ꮎ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]], ᎭᏢᏃ ᎦᏅᎯᏓ ᎠᏨᏍᏛ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎬᎪᏩᏛᏗ [[marker]] ᎾᏍᎩᎾᎢ nvwatohiyadv ᎠᏂᏏᏴᏫᎭ (ᎬᏙᏗ ᎣᏍᏛ ᎠᏓᏍᏕᎸᏗ, ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ ᎤᏍᏗᏰᎬ&mdash;ᎾᎥᏂᎨᏍᏙᏗᏇ 1 ᎠᏎᎯᎯ ᎠᎴ 39 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ&mdash;ᏯᏓᎢᏗᏏ ᎠᎩᏍᏗ yvwatuwidv 80 ᎢᏯᏅᏓ, ᎠᎴ ᎣᏍᏛ ᎭᏫᎾᏗᏢ 7 ᏧᏕᏘᏴᏓ, ᎠᏛᏍᎬ). ᎪᎯ ᏯᏓᎢᏗᏏ ᏗᎪᏏᏐᏗ ᎦᏙᏃ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes) ᎨᏒᎢ viewed ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎢᏧᎳᎭ ᎾᏊ.
+ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᎴᏪᎢᏍᏙᏗ ᎤᏛᏏᏗᏒ ᎠᎴ dormancy. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏛᏏᏗᏒ ᎢᎦᏛ ᎯᎠ ᎠᏓᏠᎯᏍᏗ, [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᎴ ᎦᏅᎯᏓ ᎠᎴ [[bulbous|ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏓᏌᎳᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᏦᎢᏁ [[millimeter]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ. ᎤᎶᏐᏅ ᏦᎢ ᏑᏓᎵ ᎢᏯᏅᏓ, ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎾᎴᏫᏍᏗᏍᎬ (ᎯᎠ pubic ᎠᎴ armpit ᎡᏍᎦᏂ ᎤᎲᎢ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᎤᏛᏏᏗᏒ ᎠᎴᏫᏍᏙᏗ). ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏛᏍᎦ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎠᏍᏓᏩᏗᏒ ᎠᎴᏫᏍᏙᏗ [[dormancy]], ᏄᏓᎴ ᎤᏛᏏᏗᏒ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎢᏤ ᎤᏍᏗᏰᎬ pushes ᎯᎠ ᎠᎦᏴᎵ ᏌᏊ ᎠᏥᏄᎣᏫᏍᎬ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏂᏛᎴᏅᏓ ᎭᏫᎾᏗᏢ. ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ, ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏛᏍᎦ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᎢᏳᏩkᎣᏗ ᎠᎴ ᎡᏆ ᏂᎦᏅᎯᏒ ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ ᏚᎦᏔᏬᎸ. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.25 centimeters, ᎠᎴ ᎬᏩᏚᏫᏛ 0.5 [[inch|ᎢᏯᏏᏔᏛ]]es, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏏᏅᏙ. [[Anthropologist]]ᎠᏩᏒᏗᏱ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏛᎬᎢ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ [[adornment|ᎠᏣᏅᏙ]], byproduct ᎠᏂᎦᏲᎵ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]] ᏌᏊ ᎢᏳᏩᎫᏗ ᏐᎢ [[somatic|ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎤᏍᏗᏰᎬ ᎠᏰᎲ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᏄᏓᎴ ᎤᏝᏅᏓᏕᎲ ᎨᏒᎢ Ꮎ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]], ᎭᏢᏃ ᎦᏅᎯᏓ ᎠᏨᏍᏛ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎬᎪᏩᏛᏗ [[marker]] ᎾᏍᎩᎾᎢ ᏅᏩtᎣᎯᏯᏛ ᎠᏂᏏᏴᏫᎭ (ᎬᏙᏗ ᎣᏍᏛ ᎠᏓᏍᏕᎸᏗ, ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ ᎤᏍᏗᏰᎬ&mdash;ᎾᎥᏂᎨᏍᏙᏗᏇ 1 ᎠᏎᎯᎯ ᎠᎴ 39 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ&mdash;ᏯᏓᎢᏗᏏ ᎠᎩᏍᏗ ᏴᏩtᎤᏫᏛ 80 ᎢᏯᏅᏓ, ᎠᎴ ᎣᏍᏛ ᎭᏫᎾᏗᏢ 7 ᏧᏕᏘᏴᏓ, ᎠᏛᏍᎬ). ᎪᎯ ᏯᏓᎢᏗᏏ ᏗᎪᏏᏐᏗ ᎦᏙᏃ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes) ᎨᏒᎢ viewed ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎢᏧᎳᎭ ᎾᏊ.
 
 === Aging ===
 [[Image:Old Hmong Man (Sapa Vietnam).jpg|150px|right|thumb| ᎠᎦᏴᎳᎯᎨᏍᏙᏗ [[Hmong people|Hmong]] ᎠᏍᎦᏯ ᎬᏙᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ]]
 
-ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colourless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ lyudetiyvda ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ansigaya ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
+ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colourless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏏᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
 
 ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ atsinuqowisgv ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ lyudetiyvda; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]]ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ansigaya ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ iyuwakodi ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ansigaya" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ.. ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
 
@@ -80,10 +80,10 @@ g ᎤᏍᏗᏰᎬ]]
 
 ᏱᏂᎬᏛᎾ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ Ꮎ ᏍᏆᎳᎢ ᎤᏍᏗᏰᎬ ᎾᎿ ansigaya ᎤᎭ ᏭᏪᏙᎢ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᎨᏔᏗᏍᏗ, ᏥᏄᏍᏗ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᏗᏓᏂᏱᏍᎩ ᎠᎴ ᏐᎢ ᎠᏂᏌᏙᏯᏍᎩ Ꮎ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎪᎯᏳᎯ ᎠᎴ ᏓᏕᏲᎲᏍᎬ. ᏗᎦᏟᏌᏅᎯ, ᏗᎨᏥᎾᏝᎢ ᎠᎴ ᎤᏄᎸᎲᏍᎩ armies ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎵᏍᏙᏯᏗ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[medieval|lyudetiyvda]] [[Europe]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].
 
-ᎠᏛᏏᏒ ᎠᎴ ᏙᏄᏭᎢ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎨᏒᎢ lifestyle ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᏧᏆᏗᏅᏓ ᏗᏍᏆᎸᏙᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏄᎾᏛᏅ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ [[Western Culture|ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ]] iyuwakodi [[World War One|ᎡᎶᎯ ᏓᏄᏩ ᏌᏊ]]. ᎤᎪᏗᏗ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ ᎠᏂᏙᎾᎥ [[Pentecostal]] ᏚᎾᏓᏟᏌᎲ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ [[trim|ᎪᏢᎯᏐᏗ]]ming ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎤᎶᏐᏅ ᏧᎾᏍᏗ. ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏕᏲᎲ ᎯᎠ [[1960s]] ᎤᏗᏅᏒᎩ ᏅᎪᏢᎯᏐᏗᏱ tohi adedi ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ.  ᎤᏍᏗᏰᎬ ᏂᎦᏅᎯᏒ ᎨᏒᎢ ᎡᎷᏪᎢ (ᎭᏫᎾᏗᏢ ᎢᏯᏏᏔᏗᏍᏗ ᎠᎴ centimeters) ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] ᎠᏍᏓᏅᏅ ᎾᎿ ᎯᎠ [[forehead|ᎢᎬᏱᏗᏢ ᎠᏍᎪᎵ]] ᎦᎸᎳᏗᏢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ ᎡᎳᏗ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᎠᏯᏖᏃᎯ. ᏰᎵᏊ ᏗᏙᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᎠᎴ lyudetiyvda ᏂᎦᏅᎯᏒ (midpoint ᎾᎿ ᎯᎠ ᎠᏰᎸ, ᎭᏢᏃ ᎯᎠ [[buttock|ᎣᏂᏗᏢ]]ᏗᏠᎯᏍᏗ ᎯᎠ [[thigh]]), [[waist|ᎤᏓᏠᏍᏛ]] ᏂᎦᏅᎯᏒ, [[hip|ᎠᎧᏍᎨᏂ]] ᏂᎦᏅᎯᏒ, ᎠᎴ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-thigh. ᎾᏍᎩ ᎠᎩᏍᎪᎢ ᎬᏩᏚᏫᏛ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᎢᏳᏓᎵᎭ ᎪᏢᎯᏐᏗ, ᎠᏛᏍᎬ ᏌᏊ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎤᎵᏍᏛ ᏂᎦᏅᎯᏒ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ ᎧᎵ ᏗᏙᎳᎩ [[genetics|ᎠᏛᎯᏍᏙᏗ]] ᎠᎴ overall ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎡᏆ [[internet communities|ᎧᎾᏁᏍ ᎾᎥ ᏄᎾᏓᎸ]] ᎠᎴ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ lifestyle.
+ᎠᏛᏏᏒ ᎠᎴ ᏙᏄᏭᎢ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎨᏒᎢ lifestyle ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᏧᏆᏗᏅᏓ ᏗᏍᏆᎸᏙᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏄᎾᏛᏅ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ [[Western Culture|ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ]] ᎢᏳᏩᎣᏗ [[World War One|ᎡᎶᎯ ᏓᏄᏩ ᏌᏊ]]. ᎤᎪᏗᏗ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ ᎠᏂᏙᎾᎥ [[Pentecostal]] ᏚᎾᏓᏟᏌᎲ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ [[trim|ᎪᏢᎯᏐᏗ]]ming ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎤᎶᏐᏅ ᏧᎾᏍᏗ. ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏕᏲᎲ ᎯᎠ [[1960s]] ᎤᏗᏅᏒᎩ ᏅᎪᏢᎯᏐᏗᏱ tohi adedi ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ.  ᎤᏍᏗᏰᎬ ᏂᎦᏅᎯᏒ ᎨᏒᎢ ᎡᎷᏪᎢ (ᎭᏫᎾᏗᏢ ᎢᏯᏏᏔᏗᏍᏗ ᎠᎴ centimeters) ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] ᎠᏍᏓᏅᏅ ᎾᎿ ᎯᎠ [[forehead|ᎢᎬᏱᏗᏢ ᎠᏍᎪᎵ]] ᎦᎸᎳᏗᏢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ ᎡᎳᏗ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᎠᏯᏖᏃᎯ. ᏰᎵᏊ ᏗᏙᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᎠᎴ lyudetiyvda ᏂᎦᏅᎯᏒ (midpoint ᎾᎿ ᎯᎠ ᎠᏰᎸ, ᎭᏢᏃ ᎯᎠ [[buttock|ᎣᏂᏗᏢ]]ᏗᏠᎯᏍᏗ ᎯᎠ [[thigh]]), [[waist|ᎤᏓᏠᏍᏛ]] ᏂᎦᏅᎯᏒ, [[hip|ᎠᎧᏍᎨᏂ]] ᏂᎦᏅᎯᏒ, ᎠᎴ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-thigh. ᎾᏍᎩ ᎠᎩᏍᎪᎢ ᎬᏩᏚᏫᏛ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᎢᏳᏓᎵᎭ ᎪᏢᎯᏐᏗ, ᎠᏛᏍᎬ ᏌᏊ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎤᎵᏍᏛ ᏂᎦᏅᎯᏒ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ ᎧᎵ ᏗᏙᎳᎩ [[genetics|ᎠᏛᎯᏍᏙᏗ]] ᎠᎴ overall ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎡᏆ [[internet communities|ᎧᎾᏁᏍ ᎾᎥ ᏄᎾᏓᎸ]] ᎠᎴ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ lifestyle.
 
 === ᎠᏰᎸ ᎤᏍᏗᏰᎬ ===
-ᎯᎠ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎾᏍᎩ ᎾᏍᏇ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎠᎴ itsuwakodi. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎤᏂᎪᏗᏗ [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]] ᎾᎿ ansigaya ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ [[virility|ᎤᏂᎪᏗᏗ]] ᎠᎴ [[masculinity]]; ᏐᎢ societies ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎪᏪᎶᏗ youthfulness.
+ᎯᎠ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎾᏍᎩ ᎾᏍᏇ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎠᎴ ᎢᏧᏩᎣᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎤᏂᎪᏗᏗ [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]] ᎾᎿ ansigaya ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ [[virility|ᎤᏂᎪᏗᏗ]] ᎠᎴ [[masculinity]]; ᏐᎢ societies ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎪᏪᎶᏗ youthfulness.
 
 ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], ᏴᏫ ᎾᏍᎩ ᎠᏰᎸᏅ ᎠᎧᎵᏬᎯ ᎤᏩᎾᏕᏍᎩ, ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ [[beauty|ᎤᏬᏚ]]. ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Egyptian ᎠᎨᏴ ᎤᎩᏒᎩ ᎡᏆ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏏᏴᏫ ᎤᏍᏗᏰᎬ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ ᎠᏰᎸ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎠᎨᏴ ᎠᏍᎪᎵ (ᎠᎴ ᎢᏧᎳᎭ ᎪᎯ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎫᏢᎥᏍᎬ<ref name="egypt">Dersin, Denise, ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ. (Eds.) (1996). ''ᎦᏙ ᎤᏍᏗ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏛᎩ ᎾᏍᎩᏯᎢ ᎾᎿ ᎯᎠ adel didiyi ᎯᎠ Nile''. Richmond, Virginia: iyuwakodi-ᎥᎴᏂᏙᎲ ᏗᎪᏪᎵ.</ref>). ᎯᎠ [[ancient Greece|ᎯᎸᎯᏳᎢ ᎠᎪᎢ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎯ ᎤᏩᎾᏕᏍᎩ ᎤᎵᎶᎯ, ᎠᎦᏎᏍᏗᏍᎬ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᎾᏍᏋ ᏗᎦᎳᏫᎩ [[youth|ᎠᏛᏍᎩ]] ᎠᎴ ᎤᏬᏚ. ᎪᎯ ᎨᏒᎢ reflected ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎠᎨᏴ ᎤᏙᏢᏒ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ pubic ᎤᏍᏗᏰᎬ. [[Islam]] ᏓᏓᏁᏤᎸ ᎤᎪᏗᏗ ᎤᏬᎯᏳᏒ ᎬᏙᏗ ᎪᎯᏳᎯ ᎤᏍᏗᏰᎬ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎫᏢᎥᏍᎬ ᎤᏍᏗᏰᎬ ᎾᎥᎢ ᎠᏂᎨᏴ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ armpit ᎠᎴ pubic ᎤᏍᏗᏰᎬ (ᎠᎪᏩᏛᏗ [[fitrah|ᎯᏍᎩ ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ᏫᏚᏳᎪᏛ  fitrah]]). 
 
